--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -305,7 +305,7 @@
         that test each web page. Desktop and mobile websites are tested under
         different configurations:
       </p>
-
+      <div class="table-wrap">
       <table>
         <thead>
           <tr>
@@ -356,6 +356,7 @@
           </tr>
         </tbody>
       </table>
+      </div>
 
       <p>
         Desktop websites are run from within a desktop Chrome environment on a
@@ -413,7 +414,7 @@
         Lighthouse is run as its own distinct test from within <a href="#webpagetest">WebPageTest</a>,
         but it has its own configuration profile:
       </p>
-
+      <div class="table-wrap">
       <table>
         <thead>
           <tr>
@@ -440,6 +441,7 @@
           </tr>
         </tbody>
       </table>
+      </div>
 
       <aside>
         * Note that Lighthouse is normally configured to have a CPU slowdown of
