--- a/src/templates/en/2019/contributors.html
+++ b/src/templates/en/2019/contributors.html
@@ -139,6 +139,7 @@
   justify-content: start;
   flex-wrap: wrap;
   margin: 0 -15px;
+  justify-content: center;
 }
 
 .contributor-grid:not([data-rendered='true']) .contributor {
@@ -171,7 +172,7 @@
   border-radius: 15px;
   box-shadow: 0 0 16px 0 rgba(78, 85, 100, 0.2);
   padding: 24px 34px;
-  width: 250px;
+  width: 230px;
   margin: 15px;
 }
 
