--- a/src/templates/en/2019/table_of_contents.html
+++ b/src/templates/en/2019/table_of_contents.html
@@ -13,10 +13,11 @@
 <meta property="og:type" content="article">
 <meta property="og:description" content="{{ self.description() }}">
 
-<meta name="twitter:card" content="summary">
+<meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@HTTPArchive">
 <meta name="twitter:title" content="{{ self.title() }}">
 <meta name="twitter:image" content="https://almanac.httparchive.org/static/images/methodology-characters.png">
+<meta name="twitter:image:alt" content="{{ year }} Web Almanac characters" />
 <meta name="twitter:description" content="{{ self.description() }}">
 
 <script type="application/ld+json">
