--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -4,22 +4,16 @@
   grid-template-areas: 'index content';
   grid-template-columns: 300px auto;
 }
-.table-wrap-container,
+.table-wrap,
 .floating-card {
   border-radius: 16px;
   box-shadow: 0 0 16px 0 rgba(78, 85, 100, 0.2);
 }
 .table-wrap {
-  display: flex;
-  margin: 0 auto;
-  padding: 16px;
-  max-width: 100%;
-  justify-content: center;
-}
-.table-wrap-container {
-  overflow: auto;
   display: inline-block;
-  margin: 0 -16px;
+  margin: 10px 0;
+  max-width: 100%;
+  overflow: auto;
 }
 
 .code-block {
@@ -113,6 +107,7 @@
   margin-top: 0;
   padding-top: 0;
   min-width: 320px;
+  font-size: 18px;
 }
 .content > section {
   margin-bottom: 64px;
@@ -178,7 +173,7 @@
 }
 
 .authors .tagline{
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .authors .avatar{
@@ -276,13 +271,14 @@ figure iframe {
   margin: 0 auto;
 }
 figcaption {
-  margin-top: 8px;
+  margin-top: 20px;
   text-align: center;
 }
 table {
   margin: 0 auto;
   max-width: 100%;
   border-collapse: collapse;
+  display: block;
 }
 thead {
   font-family: 'Poppins', sans-serif;
@@ -358,9 +354,7 @@ figure .big-number {
     max-height: 100%;
     transition: max-height 0.25s ease-in;
   }
-  .table-wrap {
-    justify-content: left;
-  }
+
   table {
     font-size: .8em;
   }
