--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -306,7 +306,7 @@
         that test each web page. Desktop and mobile websites are tested under
         different configurations:
       </p>
-      <div class="table-wrap"><div class="table-wrap-container">
+      <div class="table-wrap">
       <table>
         <thead>
           <tr>
@@ -357,7 +357,7 @@
           </tr>
         </tbody>
       </table>
-      </div></div>
+      </div>
 
       <p>
         Desktop websites are run from within a desktop Chrome environment on a
@@ -415,7 +415,7 @@
         Lighthouse is run as its own distinct test from within <a href="#webpagetest">WebPageTest</a>,
         but it has its own configuration profile:
       </p>
-      <div class="table-wrap"><div class="table-wrap-container">
+      <div class="table-wrap">
       <table>
         <thead>
           <tr>
@@ -442,7 +442,7 @@
           </tr>
         </tbody>
       </table>
-      </div></div>
+      </div>
 
       <aside>
         * Note that Lighthouse is normally configured to have a CPU slowdown of
