Copyediting of the HTTP/2 Chapter (#334)
* Copyediting of the HTTP/2 Chapter

I've made some amends of the copy in this chapter, mainly for readability.

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/en/2019/http2.md

* HTTP/2 chapter edits (#359)

* rick's edits

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* feedback

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

* Update src/content/en/2019/http2.md

Co-Authored-By: Barry Pollard <barry_pollard@hotmail.com>

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -16,7 +16,7 @@
   overflow: auto;
 }
 
-.code-block {
+.code-block, pre {
   margin: 8px 0;
   padding: 24px;
 }
@@ -26,7 +26,7 @@
   width: calc(100% + 32px);
   left: -24px;
 }
-.code-block pre {
+.code-block, pre {
   overflow-y: hidden;
   overflow-x: scroll;
 }
