--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -9,17 +9,17 @@
 
 <meta property="og:title" content="{{ self.title() }}">
 <meta property="og:url" content="https://almanac.httparchive.org{{  url_for(request.endpoint, **get_view_args(lang=language.lang_code, year=year)) }}">
-<meta property="og:image" content="https://almanac.httparchive.org/static/images/methodology-characters.png">
-<meta property="og:image:height" content="354">
-<meta property="og:image:width" content="984">
+<meta property="og:image" content="https://almanac.httparchive.org/static/images/methodology-banner.png">
+<meta property="og:image:height" content="984">
+<meta property="og:image:width" content="1200">
 <meta property="og:type" content="article">
 <meta property="og:description" content="{{ self.description() }}">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@HTTPArchive">
 <meta name="twitter:title" content="{{ self.title() }}">
-<meta name="twitter:image" content="https://almanac.httparchive.org/static/images/methodology-characters.png">
-<meta name="twitter:image:alt" content="{{ year }} Web Almanac characters" />
+<meta name="twitter:image" content="https://almanac.httparchive.org/static/images/methodology-banner.png">
+<meta name="twitter:image:alt" content="{{ year }} Web Almanac methodology" />
 <meta name="twitter:description" content="{{ self.description() }}">
 
 <script type="application/ld+json">
@@ -33,9 +33,9 @@
 	  "headline": "{{ self.title() }}",
 	  "image": {
 	  	  "@type": "ImageObject",
-	  	  "url": "https://almanac.httparchive.org/static/images/methodology-characters.png",
-	  	  "height": 354,
-	  	  "width": 984
+	  	  "url": "https://almanac.httparchive.org/static/images/methodology-banner.png",
+	  	  "height": 984,
+	  	  "width": 1200
 	  },
 	  "publisher": {
 	  	  "@type": "Organization",
