Add a discuss button to each chapter (#382)
* discuss button per chapter

* Optimised images with calibre/image-actions

* replace es6 syntax for compat

* use posts count

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -147,6 +147,18 @@
   font-weight: normal;
 }
 
+.discuss img {
+  margin-right: 10px;
+  vertical-align: top;
+}
+.discuss a:hover img,
+.discuss a:focus img {
+  filter: brightness(0) saturate(100%) invert(86%) sepia(4%) saturate(4357%) hue-rotate(16deg) brightness(136%) contrast(94%);
+}
+#num_comments {
+  line-height: 24px;
+}
+
 .authors h4{
   padding: 16px 0;
 }
