--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -222,6 +222,11 @@ header .btn + .language-switcher {
 h2, h3, h4 {
   margin-top: 2em;
 }
+h2 code,
+h3 code,
+h4 code {
+  font-size: inherit;
+}
 
 p, td, th, code, li {
   font-size: 17px;
