First Commit to Add Spanish Support (#386)
* Creating the folders and files structure needed to support spanish version of Web Almanac. Adding Spanish language into language.py. Adding a 25x25 Spain's flag to be used when the language selected is spanish.

* Optimised images with calibre/image-actions

* Update src/templates/es/2019/base.html

Co-Authored-By: José M. Pérez <JMPerez@users.noreply.github.com>

* Update src/templates/es/2019/base.html

Co-Authored-By: José M. Pérez <JMPerez@users.noreply.github.com>

* Update src/templates/es/2019/base.html

Co-Authored-By: José M. Pérez <JMPerez@users.noreply.github.com>

* Update src/templates/es/2019/index.html

Co-Authored-By: José M. Pérez <JMPerez@users.noreply.github.com>

* Update src/templates/es/2019/index.html

Co-Authored-By: José M. Pérez <JMPerez@users.noreply.github.com>

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -185,6 +185,12 @@ header .btn + .language-switcher {
   color: inherit;
   cursor: pointer;
 }
+
+.language-switcher option,
+.year-switcher option {
+  color: #1A2B49;
+}
+
 .language-switcher select:focus,
 .year-switcher select:focus {
   border-color: #f2f2f2;
