--- a/src/templates/error/error.html
+++ b/src/templates/error/error.html
@@ -9,6 +9,9 @@
 {% block styles %}
 {{ super() }}
 <style>
+.main a, .main a:visited {
+  color: #fff;
+}
 .main {
   position: relative;
   padding-bottom: 200px;
