--- a/src/templates/error/error.html
+++ b/src/templates/error/error.html
@@ -12,7 +12,7 @@
 .main a.btn, .main a.btn:visited {
   color: #fff;
 }
-main a.btn:hover, main a.btn:focus, main a.alt.btn {
+.main a.btn:hover, .main a.btn:focus, .main a.alt.btn {
   color: #1A2B49;
 }
 .main {
