Home screen contributors style (#417)
* Fixed the styling of the contributors on the home page when the media query is targeting full desktop.

* Optimised images with calibre/image-actions

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -204,10 +204,10 @@ p {
   font-size: 600px;
   font-weight: bold;
   letter-spacing: 50px;
-  overflow: visible;
-  top: -100px;
-  position: relative;
   pointer-events: none;
+  height: 100%;
+  width: auto;
+  line-height: 400px;
 }
 
 /* Methodology */
