Fixing chapter page a11y issues (#416)
* add missing label

* empty alt for chapter heroes

* big number contrast

* Optimised images with calibre/image-actions

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -316,7 +316,7 @@ tbody tr:nth-child(even) {
 figure .big-number {
   text-align: center;
   font: bold 8rem/1em Poppins, sans-serif;
-  color: #a8caba;
+  color: #62718b;
 }
 figure .fig-mobile {
   display: none;
