Update Meta Descriptions and Timestamps (#422)

--- a/src/templates/en/2019/contributors.html
+++ b/src/templates/en/2019/contributors.html
@@ -2,7 +2,7 @@
 
 {% block title %}2019 Contributors | The Web Almanac by HTTP Archive{% endblock %}
 
-{% block description %}The {{ config.contributors.items() | length }} people who contributed to the 2019 Web Almanac from HTTP Archive as Analysts, Authors, Brainstormers, Designers, Developers, Editors, Reviewers and Translators{% endblock %}
+{% block description %}The {{ config.contributors.items() | length }} people who contributed to the 2019 Web Almanac from HTTP Archive as Analysts, Authors, Brainstormers, Designers, Developers, Editors, Reviewers and Translators.{% endblock %}
 
 {% block meta %}
 <meta name="description" content="{{ self.description() }}">
