--- a/src/templates/en/2019/index.html
+++ b/src/templates/en/2019/index.html
@@ -2,7 +2,7 @@
 
 {% block title %}The 2019 Web Almanac by HTTP Archive{% endblock %}
 
-{% block description %}The 2019 Web Almanac by HTTP Archive is an annual state of the web combining the raw stats and trends of the HTTP Archive with the expertise of the web community{% endblock %}
+{% block description %}The 2019 Web Almanac by HTTP Archive is an annual state of the web combining the raw stats and trends of the HTTP Archive with the expertise of the web community.{% endblock %}
 
 {% block meta %}
 <meta name="description" content="{{ self.description() }}">
