--- a/src/templates/en/2019/table_of_contents.html
+++ b/src/templates/en/2019/table_of_contents.html
@@ -2,7 +2,7 @@
 
 {% block title %}Table of Contents | Web Almanac 2019{% endblock %}
 
-{% block description %}Table of Contents for the 2019 Web Almanac from HTTP Archive, listing each section: Page Contents, User Experience, Content Publishing, Content Distribution{% endblock %}
+{% block description %}Table of Contents for the 2019 Web Almanac from HTTP Archive, listing each section: Page Contents, User Experience, Content Publishing, Content Distribution.{% endblock %}
 
 {% block meta %}
 <meta name="description" content="{{ self.description() }}">
