--- a/src/templates/es/2019/base.html
+++ b/src/templates/es/2019/base.html
@@ -2,7 +2,7 @@
 
 {% block styles %}
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i, 900|Poppins:300,400,700,900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900%7CPoppins:300,400,700,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/static/css/2019.css">
 {% endblock %}
 
@@ -27,7 +27,7 @@
         {{ language_switcher() }}
       </div>
       <button type="button" class="menu-btn" arial-label="Menú">
-        <img class="menu-icon" src="/static/images/menu.png" data-src-close="/static/images/close.png"/>
+        <img class="menu-icon" src="/static/images/menu.png" data-src-close="/static/images/close.png" alt=""/>
       </button>
       <nav class="menu">
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Tabla de Contenidos</a>
