--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -197,7 +197,7 @@
         </div>
 
         <p>
-          Results for each metric are publicly viewable in chapter-specific spreadsheets, eg <a href="https://docs.google.com/spreadsheets/d/1kBTglETN_V9UjKqK_EFmFjRexJnQOmLLr-I2Tkotvic/edit?usp=sharing">JavaScript results</a>.
+          Results for each metric are publicly viewable in chapter-specific spreadsheets, for example <a href="https://docs.google.com/spreadsheets/d/1kBTglETN_V9UjKqK_EFmFjRexJnQOmLLr-I2Tkotvic/edit?usp=sharing">JavaScript results</a>.
         </p>
     </section>
 
@@ -239,7 +239,7 @@
         <p>
           HTTP Archive is also considered a lab testing tool, meaning it tests
           websites from a datacenter and does not collect data from real-world
-          user experiences. Therefore all website home pages are tested with an
+          user experiences. Therefore, all website home pages are tested with an
           empty cache in a logged out state.
         </p>
     </section>
@@ -280,7 +280,7 @@
       </p>
 
       <p>
-        Other metrics may not necessarily be impossible to measure, but are
+        Other metrics may not necessarily be impossible to measure but are
         challenging or unreliable. For example, aspects of web design are
         inherently visual and may be difficult to quantify, like whether a page
         has an intrusive modal dialog.
@@ -498,7 +498,7 @@
         of UX metrics like paint, load, interaction, and layout stability. In
         addition to grouping by month, experiences may also be sliced by
         dimensions like country-level geography, form factor (desktop, phone,
-        tablet), and effective connection type (4G, 3G, etc).
+        tablet), and effective connection type (4G, 3G, etc.).
       </p>
 
       <p>
