Meta tweaks for Twitter (#450)
* Meta tweaks for Twitter

* Update src/templates/en/2019/index.html

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -2,7 +2,7 @@
 
 {% block title %}Methodology | The Web Almanac by HTTP Archive{% endblock %}
 
-{% block description %}Describes how the 2019 Web Almanac from HTTP Archive was put together: The Datasets and Tools used and how the project was run.{% endblock %}
+{% block description %}Describes how the 2019 Web Almanac was put together: The Datasets and Tools used and how the project was run.{% endblock %}
 
 {% block meta %}
 <meta name="description" content="{{ self.description() }}">
