--- a/src/templates/en/2019/index.html
+++ b/src/templates/en/2019/index.html
@@ -1,16 +1,16 @@
 {% extends "en/2019/base.html" %}
 
-{% block title %}The 2019 Web Almanac by HTTP Archive{% endblock %}
+{% block title %}The 2019 Web Almanac{% endblock %}
 
-{% block description %}The 2019 Web Almanac by HTTP Archive is an annual state of the web combining the data and trends of the HTTP Archive with the expertise of the web community.{% endblock %}
+{% block description %}The Web Almanac is an annual state of the web report combining the expertise of the web community with the data and trends of the HTTP Archive.{% endblock %}
 
 {% block meta %}
 <meta name="description" content="{{ self.description() }}">
 
 <meta property="og:title" content="{{ self.title() }}">
 <meta property="og:url" content="https://almanac.httparchive.org{{  url_for(request.endpoint , year=year, lang=lang) }}">
-<meta property="og:image" content="https://almanac.httparchive.org/static/images/home-hero-2019-bg.png">
-<meta property="og:image:height" content="734">
+<meta property="og:image" content="https://almanac.httparchive.org/static/images/home-hero-bg.png">
+<meta property="og:image:height" content="562">
 <meta property="og:image:width" content="715">
 <meta property="og:type" content="article">
 <meta property="og:description" content="{{ self.description() }}">
@@ -18,7 +18,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@HTTPArchive">
 <meta name="twitter:title" content="{{ self.title() }}">
-<meta name="twitter:image" content="https://almanac.httparchive.org/static/images/home-hero-2019-bg.png">
+<meta name="twitter:image" content="https://almanac.httparchive.org/static/images/home-hero-bg.png">
 <meta name="twitter:image:alt" content="{{ year }} Web Almanac methodology" />
 <meta name="twitter:description" content="{{ self.description() }}">
 
@@ -41,8 +41,8 @@
 	  "headline": "{{ self.title() }}",
 	  "image": {
 	  	  "@type": "ImageObject",
-	  	  "url": "https://almanac.httparchive.org/static/images/home-hero-2019-bg.png",
-	  	  "height": 734,
+	  	  "url": "https://almanac.httparchive.org/static/images/home-hero-bg.png",
+	  	  "height": 562,
 	  	  "width": 715
 	  },
 	  "publisher": {
