--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,6 +19,7 @@
           gtag('config', 'UA-22381566-3');
       </script>
       <link rel="shortcut icon" href="/static/images/favicon.ico">
+      <link rel="apple-touch-icon" href="/static/images/apple-touch-icon.png">
       <link rel="stylesheet" href="/static/css/normalize.css">
       {% block styles %}{% endblock %}
     {% endblock %}
