--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -24,9 +24,12 @@
       {% block styles %}{% endblock %}
     {% endblock %}
     <link rel="canonical" href="https://almanac.httparchive.org{{ url_for(request.endpoint, **get_view_args(lang=language.lang_code)) }}" />
+    {% if supported_languages | length > 1%}
     {% for l in supported_languages %}
     <link rel="alternate" href="https://almanac.httparchive.org{{ url_for(request.endpoint, **get_view_args(lang=l.lang_code)) }}" hreflang="{{ l.lang_code}}" />
     {% endfor %}
+    <link rel="alternate" href="https://almanac.httparchive.org{{ url_for(request.endpoint, **get_view_args(lang='en')) }}" hreflang="x-default" />
+    {% endif %}
   </head>
 
   <body>
