--- a/src/templates/en/2019/index.html
+++ b/src/templates/en/2019/index.html
@@ -106,8 +106,8 @@
         Start exploring
       </a>
     </div>
-    <img class="intro-image-2019" src="/static/images/home-hero-2019.png" alt="The Web Almanac 2019 edition">
-    <img class="intro-image" src="/static/images/home-hero.png" alt="The Web Almanac 2019 edition">
+    <img class="intro-image-2019" src="/static/images/home-hero-2019.png" alt="The Web Almanac 2019 edition" />
+    <img class="intro-image" src="/static/images/home-hero.png" alt="The Web Almanac 2019 edition" />
   </section>
   <section class="featured-chapter">
     <div class="featured-chapter-content">
@@ -148,9 +148,9 @@
     </div>
     <div class="people">
       <div class="people-number">{{ contributors }}</div>
-      <img id="character-markup" class="character" src="/static/images/character-markup.png" />
-      <img id="character-star" class="character" src="/static/images/character-star.png" />
-      <img id="character-hat" class="character" src="/static/images/character-hat.png" />
+      <img id="character-markup" class="character" src="/static/images/character-markup.png" loading="lazy" />
+      <img id="character-star" class="character" src="/static/images/character-star.png" loading="lazy" />
+      <img id="character-hat" class="character" src="/static/images/character-hat.png" loading="lazy" />
     </div>
   </section>
   <section class="methodology-container">
@@ -180,7 +180,7 @@
       <a href="{{ url_for('methodology', year=year, lang=lang) }}" class="alt btn">
         Learn about our Methodology
       </a>
-      <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" />
+      <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" loading="lazy" />
     </div>
   </section>
 </div>
