--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -27,7 +27,7 @@
         {{ language_switcher() }}
       </div>
       <button type="button" class="menu-btn" arial-label="Menu">
-        <img class="menu-icon" src="/static/images/menu.png" data-src-close="/static/images/close.png" alt=""/>
+        <img class="menu-icon" src="/static/images/menu.png" data-src-close="/static/images/close.png" alt="" />
       </button>
       <nav class="menu">
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Table of Contents</a>
@@ -35,14 +35,14 @@
         <a href="{{ url_for('methodology', year=year, lang=lang) }}">Methodology</a>
         <div class="misc">
           <a href="https://httparchive.org/">
-            <img src="/static/images/ha-home.png" alt="HTTP Archive home" />
+            <img src="/static/images/ha-home.png" alt="HTTP Archive home" height="34" width="66" loading="lazy" />
           </a>
           <div class="social-media">
             <a href="https://twitter.com/HTTPArchive" class="twitter">
-              <img src="/static/images/twitter.png" alt="Twitter" />
+              <img src="/static/images/twitter.png" height="80" width="65" alt="Twitter" loading="lazy" />
             </a>
             <a href="https://github.com/HTTPArchive/almanac.httparchive.org" class="github">
-              <img src="/static/images/github.png" alt="GitHub" />
+              <img src="/static/images/github.png" height="80" width="78" alt="GitHub" loading="lazy" />
             </a>
           </div>
           {{ language_switcher() }}
@@ -57,7 +57,7 @@
     <footer class="alt-bg">
       <a class="navigation-logo home-logo" href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" alt="web almanac by http archive" srcset="/static/images/logo@2x.png 2x" /></a>
       <a class="navigation-logo ha-logo" href="https://httparchive.org">
-        <img src="/static/images/ha-home.png" alt="HTTP Archive home" />
+        <img src="/static/images/ha-home.png" alt="HTTP Archive home" height="34" width="66" loading="lazy" />
       </a>
       <nav class="nav-items">
         <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}">Table of Contents</a>
@@ -68,10 +68,10 @@
       <p class="copyright">Copyright © 2019 Web Almanac. All rights reserved.</p>
       <div class="social-media">
         <a href="https://twitter.com/HTTPArchive" class="twitter">
-          <img src="/static/images/twitter.png" alt="Twitter" />
+          <img src="/static/images/twitter.png" alt="Twitter" height="80" width="65" loading="lazy" />
         </a>
         <a href="https://github.com/HTTPArchive/almanac.httparchive.org" class="github">
-          <img src="/static/images/github.png" alt="GitHub" />
+          <img src="/static/images/github.png" alt="GitHub" height="80" width="78" loading="lazy" />
         </a>
       </div>
       <hr>
@@ -109,9 +109,9 @@
 {% if supported_languages | length > 1%}
 <div class="language-switcher">
   {% if language is not none %}
-    <img src="/static/images/{{ language }}.png" class="flag" height="25" width="25" />
+    <img src="/static/images/{{ language }}.png" class="flag" height="25" width="25" loading="lazy" />
   {% else %}
-    <img src="/static/images/English.png" class="flag" height="25" width="25" />
+    <img src="/static/images/English.png" class="flag" height="25" width="25" loading="lazy" />
   {% endif %}
   <select>
     {% for l in supported_languages %}
@@ -122,7 +122,7 @@
       </option>
     {% endfor %}
   </select>
-  <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" alt="open" height="20" width="20" />
+  <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" alt="open" height="20" width="20" loading="lazy" />
 </div>
 {% endif %}
 {% endmacro %}
@@ -138,6 +138,6 @@
         </option>
       {% endfor %}
   </select>
-  <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" alt="open" height="20" width="20" />
+  <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" alt="open" height="20" width="20" loading="lazy" />
 </div>
 {% endmacro %}
