--- a/src/templates/en/2019/table_of_contents.html
+++ b/src/templates/en/2019/table_of_contents.html
@@ -218,10 +218,10 @@
     </div>
 
     <section class="characters">
-      <img class="character" src="/static/images/character-painter.png" alt=""/>
-      <img class="character" src="/static/images/character-file.png" alt=""/>
-      <img class="character" src="/static/images/character-star.png" alt=""/>
-      <img class="character" src="/static/images/character-hat.png" alt=""/>
+      <img class="character" src="/static/images/character-painter.png" alt="" loading="lazy" />
+      <img class="character" src="/static/images/character-file.png" alt="" loading="lazy" />
+      <img class="character" src="/static/images/character-star.png" alt="" loading="lazy" />
+      <img class="character" src="/static/images/character-hat.png" alt="" loading="lazy" />
     </section>
   </div>
 </section>
